--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <h1>Elias Sacha</h1>
         <p>Email: <a href="mailto:el908851@ucf.edu">el908851@ucf.edu</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/elias-sacha-8758b5357/" target="_blank">My LinkedIn Profile</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/elias-sacha/" target="_blank">My LinkedIn Profile</a></p>
     </header>
 
     <section>
