--- a/project1.html
+++ b/project1.html
@@ -2,19 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Digital Checkout System</title>
+        <title>Digital Checkout System</title>
+        <link rel="stylesheet" href="resumeresponsive.css">
 </head>
+
 <body>
-
-
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="project1.html">Project 1</a></li>
-        <li><a href="project2.html">Project 2</a></li>
-        <li><a href="mailto:el908851@ucf.edu">Contact</a></li>
-    </ul>
-</nav>
+    <nav>
+        <button><a href="index.html">Home</a></button>
+        <button><a href="project1.html">Project 1</a></button>
+        <button><a href="project2.html">Project 2</a></button>
+    </nav>
 
 <header>
     <h1>Digital Checkout System</h1>
