--- a/project1.html
+++ b/project1.html
@@ -13,6 +13,15 @@
         <button><a href="project2.html">Project 2</a></button>
     </nav>
 
+    <details class="mobile-menu">
+      <summary>☰ Menu</summary>
+      <nav>
+           <button><a href="index.html">Home</a></button>
+           <button><a href="project1.html">Project 1</a></button>
+           <button><a href="project2.html">Project 2</a></button>
+       </nav>
+    </details>
+    
 <header>
     <h1>Digital Checkout System</h1>
 </header>
@@ -56,3 +65,4 @@
 
 </body>
 </html>
+
